feat: add CRUD for configmaps
